fix folding of lines with end position at column 0 of a line

the old workaround is no longer needed, the outer level of code handles this
the workaround was broken, too, as it didn't use the right line but plainLine(lines() - 1)

BUG: 405197